added download, copy svg/png funcationality

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,11 @@ body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+button {
+  cursor: pointer;
+}
+
+p {
+  margin-bottom: 0;
+}
