--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,8 @@
 
 body {
   scroll-behavior: smooth;
+  color: #1f2937;
+  /* color: @apply text-gray-800; */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
